--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-ATLAS_URI = 'mongodb+srv://rchdfall:aPiRTzeUDnNflY8O@chatreel.7ubawsq.mongodb.net/?retryWrites=true&w=majority&appName=chatreel'
+ATLAS_URI = 'mongodb+srv://rchdfall:@chatreel.7ubawsq.mongodb.net/?retryWrites=true&w=majority&appName=chatreel'
 JWT_SECRET = supersecretkey79938884
